add table header to default slim template

--- a/lib/basic_app/views/templates/default.slim
+++ b/lib/basic_app/views/templates/default.slim
@@ -10,9 +10,13 @@ html
 
       - unless items.empty?
         table
-          - for item in items do
+          thead
             tr
-              td = item.name
+              td = "Name"
+          tbody
+            - for item in items do
+              tr
+                td = item.name
       - else
         p
          | No assets found.
