basic_views now have partials

--- a/lib/basic_app/views/templates/default.slim
+++ b/lib/basic_app/views/templates/default.slim
@@ -1,25 +1,37 @@
-doctype strict
-html
+doctype html
+html lang="en"
   head
     title Default View
+
+    meta charset="utf-8"
     meta name="keywords" content="basic_app"
+    meta name="description" content="BasicApp default template"
+    meta name="author" content="Robert Wahler"
+
+    link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css"
+
+    style type="text/css"
+      == partial 'css/basic.css'
 
   body
-    h1 Default Title
-    #content
-
-      - unless items.empty?
-        table
-          thead
-            tr
-              td = "Name"
-          tbody
-            - for item in items do
+    div class="container"
+      div class="content"
+        div class="page-header"
+          h1 Assets Report
+        - unless items.empty?
+          h2 Assets
+          table class="condensed-table bordered-table zebra-striped"
+            thead
               tr
-                td = item.name
-      - else
-        p
-         | No assets found.
+                th = "Name"
+            tbody
+              - for item in items do
+                tr
+                  td = item.name
+        - else
+          p
+           | No assets found.
 
-    #footer
-      | Copyright &copy; 2011 GearheadForHire, LLC
+      footer
+        p
+         | Copyright &copy; 2011 GearheadForHire, LLC
