rename basic_app repoman after merge

--- a/lib/repoman/views/templates/default.slim
+++ b/lib/repoman/views/templates/default.slim
@@ -4,8 +4,8 @@ html lang="en"
     title Default View
 
     meta charset="utf-8"
-    meta name="keywords" content="basic_app"
-    meta name="description" content="BasicApp default template"
+    meta name="keywords" content="repo"
+    meta name="description" content="Repoman default template"
     meta name="author" content="Robert Wahler"
 
     link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css"
