correct assets key in config template

--- a/lib/repoman/tasks/generate/templates/config/repo.conf.tt
+++ b/lib/repoman/tasks/generate/templates/config/repo.conf.tt
@@ -7,7 +7,7 @@ options:
 folders:
 
   # main repo configuration files
-  repo  : <%= "#{@path}/assets" %>
+  assets  : <%= "#{@path}/assets" %>
 
   #
   # repo user tasks, file extentions can be '.rb' or '.thor'
