add all default options to config template

--- a/lib/repoman/tasks/generate/templates/config/repo.conf.tt
+++ b/lib/repoman/tasks/generate/templates/config/repo.conf.tt
@@ -1,8 +1,12 @@
 ---
 # default CLI options
 options:
-  color: true
-  verbose: false
+  color      : AUTO
+  verbose    : false
+  short      : false
+  unmodified : HIDE
+  match      : ALL
+  list       : ALL
 
 folders:
 
