default repo config file uses info level for log files

--- a/lib/repoman/tasks/generate/templates/config/repo.conf.tt
+++ b/lib/repoman/tasks/generate/templates/config/repo.conf.tt
@@ -44,7 +44,7 @@ logging:
         color_scheme: default
     - type          : File
       name          : logfile
-      level         : debug
+      level         : info
       truncate      : true
       filename      : '<%= "#{@path}/repo.log" %>'
       layout:
