step 1 of 2, rename Repoman to RepoManager

--- a/lib/repoman/views/templates/default.erb
+++ b/lib/repoman/views/templates/default.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html> <html lang="en"> <head> <title>Default View</title>
     <meta charset="utf-8" />
     <meta content="repo" name="keywords" />
-    <meta content="Repoman default template" name="description" />
+    <meta content="RepoManager default template" name="description" />
     <meta content="Robert Wahler" name="author" />
     <link href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css" rel="stylesheet" />
     <style type="text/css"><%= partial 'css/basic.css' %></style>
