--- a/lib/repoman/views/templates/default.slim
+++ b/lib/repoman/views/templates/default.slim
@@ -5,7 +5,7 @@ html lang="en"
 
     meta charset="utf-8"
     meta name="keywords" content="repo"
-    meta name="description" content="Repoman default template"
+    meta name="description" content="RepoManager default template"
     meta name="author" content="Robert Wahler"
 
     link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css"
